# edu_ciaa_freertos

./: CMakeLists.txt  LICENSE  README.md  arm-none-eabi-gcc.cmake
